--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src = "./js/Three.js" ></script>
 <script src = "./js/OrbitControls.js" ></script>
 <script src = "./js/main.js" ></script>
-
+<script src = "./js/gltfloader.js"></script>
 
 
 </head>
@@ -23,13 +23,15 @@ function onload(){
 
     document.body.appendChild(container);
     init(container.id);
+
+    render();
 }
 
 //run load function when page is ready
-window.onload = onload();
+window.onload = onload(); 
 
 </script>
-
+<input type="text" id="error"></input>
 
 </body>
 </html>
