--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </title>
 
 <script src = "./js/jquery-3.2.1.min.js" ></script>
-<script src = "./js/Three.js" ></script>
+<script src = "./js/three.js" ></script>
 <script src = "./js/OrbitControls.js" ></script>
 <script src = "./js/main.js" ></script>
-<script src = "./js/gltfloader.js"></script>
+<script src = "./js/GLTFLoader.js"></script>
 
 
 </head>
@@ -24,7 +24,6 @@ function onload(){
     document.body.appendChild(container);
     init(container.id);
 
-    render();
 }
 
 //run load function when page is ready
